# Instagram-scraper-v1

./: .env  .gitignore  fails.txt  get_location_id.py  get_popular_posts.py  main.py  placese.txt  pyproject.toml  requirements.txt  success.txt
old/: fails.txt  placese.txt  send_to_supabase.py  success.txt  test.py
scraperApi/: .dockerignore  Dockerfile  app.py  docker-compose.yml  file_service.py  instagram_service.py  place_service.py  prometheus.yml  requirements.txt  social_parser.py  test.py  tiktok_service.py
scraperApi/config/: config.py
scraperApi/instagram/: instagram_service.py
scraperApi/model/: model.py
scraperApi/tiktok/: tiktok_service.py
scraperApi/utils/: utils.py
